src/compilador/ExMachina.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */

options
{
  static = true;
}

PARSER_BEGIN(ExMachina)

package compilador;
import java.io.IOException;
import java.io.FileNotFoundException;
import java.io.Reader;

public class ExMachina
{
  public static void main(String args [])
  {
    
    if (args.length < 1) {
        System.err.println("Uso: java compilador.ExMachina <arquivo>");
        System.exit(1);
    }
	
    try (Reader r = LerArquivo.abrir(args[0])) {
        ExMachina parser = new ExMachina(r);
        parser.inicio();
        System.out.println("Análise concluída com sucesso.");
    } catch (FileNotFoundException e) {
        System.err.println("Arquivo não encontrado: " + args[0]);
        System.exit(2);
    } catch (IOException e) {
        System.err.println("Erro de I/O: " + e.getMessage());
        System.exit(2);
    } catch (ParseException e) {
        System.err.println("Erro de sintaxe: " + e.getMessage());
        System.exit(3);
    } catch (TokenMgrError e) {
        System.err.println("Erro léxico: " + e.getMessage());
        System.exit(3);
    }
  }

  
}

PARSER_END(ExMachina)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN : /* OPERATORS */
{
  < MAIS : "+" >
| < MENOS : "-" >
| < MULTIPLICA : "*" >
| < DIVIDE : "/" >
}

TOKEN :
{
  < MAIN : "MagnumOpus">
| < ABREBLOCO : "Aperta">
| < FECHABLOCO : "Clauderes">
| < ABREPARENT : "Aperi" >
| < FECHAPARENT : "Claude" >
| < FIM : "~">
| < TIPOINT : "totum">
| < TIPOFLOAT : "fracta">
| < TIPOSTRING : "verbum">
| < ATRIBUICAO : "memento">
| < SEPARADOR  : "," >
| < IF : "ceteris" >
| < ELSE : "paribus" >
| < IGUAL : "idem" >
| < MAIOR : "maximus" >
| < MENOR : "minus" >
| < MAIORIGUAL : "aequalis" >
| < MENORIGUAL : "iunior" >
| < DIFERENTE : "diversus">
| < LOOPFOR : "iterabilis" >
| < LOOPWHILE : "dum" >
| < ABREVETOR : "Catena">
| < FECHAVETOR : "Connexa">
| < BREAK: "mori">
| < CONTINUE: "proximus">
| < RETURN: "reditus">
| < INCREMENTO : "Auctus" >

}

TOKEN :
{
  < CONSTANTE : < DIGITO > ((< DIGITO >)* | < REAL >) >
| < DIGITO : [ "0"-"9" ] >
| < REAL : "."(< DIGITO >)+ >
| < ID: (<CARACTERE >)+>
| < CARACTERE : ["a" - "z"] | ["A" - "Z"]>
| < CADEIA : "\"" (<CARACTERE> | <DIGITO> | " ")* "\"" >
}

void inicio() :
{ }
{
  	(declaracao())*	 < MAIN > bloco()
	(declaracao())*

| < EOF > 
}

void declaracao() :
{ }
{
	tipo() < ID > ( declaraFuncao() | declaraVariavel())
}

void declaraFuncao() :
{ }
{
  (< ABREPARENT >tipo() < ID >(< SEPARADOR > tipo() < ID >)*< FECHAPARENT >) bloco()
}

void declaraVariavel() :
{ }
{
  (vetorTamanho())?(< SEPARADOR > < ID > )* (atribuicao())? < FIM >
}

void chamada() :
{ }
{
  <ID> (chamadaFuncao() | chamadaVariavel() | incremento())
}

void chamadaFuncao() :
{ }
{
  < ABREPARENT> (expressao() (< SEPARADOR > expressao())*)?< FECHAPARENT > < FIM >
}

void chamadaVariavel() :
{ }
{
  (atribuicao())? < FIM >
}

void bloco() :
{ }
{
	< ABREBLOCO > (declaracao() | condicional() | enquanto() | para() | controladores() | chamada() | incremento())* < FECHABLOCO >
}

void vetorTamanho() :
{}
{
  < ABREVETOR > (< CONSTANTE > semiExpressao() | < ID > semiExpressao())? < FECHAVETOR >
}

void vetorCheio() :
{}
{
  < ABREVETOR > valor() (< SEPARADOR > valor())* < FECHAVETOR >
}

void valor() :
{}
{
  < CONSTANTE > | < CADEIA >
}

void atribuicao() :
{}
{
	< ATRIBUICAO > (valores() |  vetorCheio()) (< SEPARADOR > valores())*
}

void valores() :
{}
{
  < CADEIA >
| chamadaFuncao() semiExpressao()
| expressao()
}

void controladores() :
{}
{
  ( <BREAK > | < CONTINUE> | <RETURN > expressao()) < FIM>
}

void tipo() :
{}
{
	< TIPOINT > | < TIPOFLOAT> | < TIPOSTRING> 
}

void expressao() :
{}
{
	termo()((< MAIS > | < MENOS >) termo() )*
}

void semiExpressao() :
{}
{
	((< MAIS > | < MENOS >) termo())*
}

void termo() :
{}
{
	unario()((< MULTIPLICA > | < DIVIDE >)unario())*
}

void unario() :
{}
{
	< MENOS > elemento() | elemento()
}

void elemento() :
{}
{
	< CONSTANTE >
| 	< ID >
|   "(" expressao() ")"
}

void operadores() :
{}
{
	<IGUAL > | < MAIOR > | < MENOR > | < MAIORIGUAL > | < MENORIGUAL > | < DIFERENTE >
}

void condicional() :
{}
{
	< IF > <ABREPARENT > condicao() < FECHAPARENT > bloco() ( < ELSE > bloco())?
}

void condicao() :
{}
{
	< ID >  operadores() (< ID > | < CONSTANTE >)

}

void para() :
{}
{
	< LOOPFOR > <ABREPARENT > (declaracao())? condicao() < FIM > ( < ID > incremento() | declaraVariavel())? < FECHAPARENT > bloco()
}

void enquanto() :
{}
{
	< LOOPWHILE > <ABREPARENT > condicao() < FECHAPARENT > bloco()
}

void incremento():
{}
{
    <INCREMENTO > ( < SEPARADOR > <ID > <INCREMENTO >)* < FIM > 
}



  
  
