src/compilador/ExMachina.java
/* ExMachina.java */
/* Generated By:JavaCC: Do not edit this line. ExMachina.java */
package compilador;

public class ExMachina implements ExMachinaConstants {
  public static void main(String args []) throws ParseException
  {
    ExMachina parser = new ExMachina(System.in);
    while (true)
    {
      System.out.print("Codifique em Latim:\n");
      try
      {
        switch (ExMachina.inicio())
        {
          case 0 :
          System.out.println("Re vera bonum est.");
          break;
          case 1 :
          System.out.println("Goodbye.");
          break;
          default :
          break;
        }
      }
      catch (Exception e)
      {
        System.out.println("Defectum");
        System.out.println(e.getMessage());
        ExMachina.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

  static final public int inicio() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MAIN:
    case TIPOINT:
    case TIPOFLOAT:
    case TIPOSTRING:{
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TIPOINT:
        case TIPOFLOAT:
        case TIPOSTRING:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        declaracao();
      }
      jj_consume_token(MAIN);
      bloco();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TIPOINT:
        case TIPOFLOAT:
        case TIPOSTRING:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        declaracao();
      }
      jj_consume_token(42);
{if ("" != null) return 0;}
      break;
      }
    case 0:{
      jj_consume_token(0);
{if ("" != null) return 1;}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public void declaracao() throws ParseException {
    tipo();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ABREPARENT:{
      declaraFuncao();
      break;
      }
    case FIM:
    case ATRIBUICAO:
    case SEPARADOR:
    case ABREVETOR:{
      declaraVariavel();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void declaraFuncao() throws ParseException {
    jj_consume_token(ABREPARENT);
    tipo();
    jj_consume_token(ID);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEPARADOR:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(SEPARADOR);
      tipo();
      jj_consume_token(ID);
    }
    jj_consume_token(FECHAPARENT);
    bloco();
}

  static final public void declaraVariavel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ABREVETOR:{
      vetorTamanho();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEPARADOR:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      jj_consume_token(SEPARADOR);
      jj_consume_token(ID);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIBUICAO:{
      atribuicao();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(FIM);
}

  static final public void chamada() throws ParseException {
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ABREPARENT:{
      chamadaFuncao();
      break;
      }
    case FIM:
    case ATRIBUICAO:{
      chamadaVariavel();
      break;
      }
    case INCREMENTO:{
      incremento();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void chamadaFuncao() throws ParseException {
    jj_consume_token(ABREPARENT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MENOS:
    case ABREPARENT:
    case CONSTANTE:
    case REAL:
    case ID:{
      expressao();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SEPARADOR:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_5;
        }
        jj_consume_token(SEPARADOR);
        expressao();
      }
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(FECHAPARENT);
    jj_consume_token(FIM);
}

  static final public void chamadaVariavel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIBUICAO:{
      atribuicao();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(FIM);
}

  static final public void bloco() throws ParseException {
    jj_consume_token(ABREBLOCO);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPOFLOAT:
      case TIPOSTRING:
      case IF:
      case LOOPFOR:
      case LOOPWHILE:
      case BREAK:
      case CONTINUE:
      case RETURN:
      case INCREMENTO:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPOFLOAT:
      case TIPOSTRING:{
        declaracao();
        break;
        }
      case IF:{
        condicional();
        break;
        }
      case LOOPWHILE:{
        enquanto();
        break;
        }
      case LOOPFOR:{
        para();
        break;
        }
      case BREAK:
      case CONTINUE:
      case RETURN:{
        controladores();
        break;
        }
      case ID:{
        chamada();
        break;
        }
      case INCREMENTO:{
        incremento();
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(FECHABLOCO);
}

  static final public void vetorTamanho() throws ParseException {
    jj_consume_token(ABREVETOR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONSTANTE:
    case ID:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONSTANTE:{
        jj_consume_token(CONSTANTE);
        semiExpressao();
        break;
        }
      case ID:{
        jj_consume_token(ID);
        semiExpressao();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(FECHAVETOR);
}

  static final public void vetorCheio() throws ParseException {
    jj_consume_token(ABREVETOR);
    valor();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEPARADOR:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      jj_consume_token(SEPARADOR);
      valor();
    }
    jj_consume_token(FECHAVETOR);
}

  static final public void valor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONSTANTE:{
      jj_consume_token(CONSTANTE);
      break;
      }
    case CADEIA:{
      jj_consume_token(CADEIA);
      break;
      }
    case REAL:{
      jj_consume_token(REAL);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void atribuicao() throws ParseException {
    jj_consume_token(ATRIBUICAO);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ABREPARENT:
    case CONSTANTE:
    case REAL:
    case ID:
    case CADEIA:{
      valores();
      break;
      }
    case ABREVETOR:{
      vetorCheio();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEPARADOR:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_8;
      }
      jj_consume_token(SEPARADOR);
      valores();
    }
}

  static final public void valores() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CADEIA:{
      jj_consume_token(CADEIA);
      break;
      }
    case CONSTANTE:{
      jj_consume_token(CONSTANTE);
      semiExpressao();
      break;
      }
    case REAL:{
      jj_consume_token(REAL);
      semiExpressao();
      break;
      }
    case ABREPARENT:{
      chamadaFuncao();
      semiExpressao();
      break;
      }
    case ID:{
      jj_consume_token(ID);
      semiExpressao();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void controladores() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BREAK:{
      jj_consume_token(BREAK);
      break;
      }
    case CONTINUE:{
      jj_consume_token(CONTINUE);
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      expressao();
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(FIM);
}

  static final public void tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOINT:{
      jj_consume_token(TIPOINT);
      break;
      }
    case TIPOFLOAT:{
      jj_consume_token(TIPOFLOAT);
      break;
      }
    case TIPOSTRING:{
      jj_consume_token(TIPOSTRING);
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void expressao() throws ParseException {
    termo();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:
      case MENOS:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:{
        jj_consume_token(MAIS);
        break;
        }
      case MENOS:{
        jj_consume_token(MENOS);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      termo();
    }
}

  static final public void semiExpressao() throws ParseException {
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:
      case MENOS:
      case MULTIPLICA:
      case DIVIDE:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:{
        jj_consume_token(MAIS);
        break;
        }
      case MENOS:{
        jj_consume_token(MENOS);
        break;
        }
      case MULTIPLICA:{
        jj_consume_token(MULTIPLICA);
        break;
        }
      case DIVIDE:{
        jj_consume_token(DIVIDE);
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      termo();
    }
}

  static final public void termo() throws ParseException {
    unario();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLICA:
      case DIVIDE:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLICA:{
        jj_consume_token(MULTIPLICA);
        break;
        }
      case DIVIDE:{
        jj_consume_token(DIVIDE);
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      unario();
    }
}

  static final public void unario() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MENOS:{
      jj_consume_token(MENOS);
      elemento();
      break;
      }
    case ABREPARENT:
    case CONSTANTE:
    case REAL:
    case ID:{
      elemento();
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void elemento() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONSTANTE:{
      jj_consume_token(CONSTANTE);
      break;
      }
    case ID:{
      jj_consume_token(ID);
      break;
      }
    case REAL:{
      jj_consume_token(REAL);
      break;
      }
    case ABREPARENT:{
      jj_consume_token(ABREPARENT);
      expressao();
      jj_consume_token(FECHAPARENT);
      break;
      }
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void operadores() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      jj_consume_token(IGUAL);
      break;
      }
    case MAIOR:{
      jj_consume_token(MAIOR);
      break;
      }
    case MENOR:{
      jj_consume_token(MENOR);
      break;
      }
    case MAIORIGUAL:{
      jj_consume_token(MAIORIGUAL);
      break;
      }
    case MENORIGUAL:{
      jj_consume_token(MENORIGUAL);
      break;
      }
    case DIFERENTE:{
      jj_consume_token(DIFERENTE);
      break;
      }
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void condicional() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(ABREPARENT);
    condicao();
    jj_consume_token(FECHAPARENT);
    bloco();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      bloco();
      break;
      }
    default:
      jj_la1[32] = jj_gen;
      ;
    }
}

  static final public void condicao() throws ParseException {
    jj_consume_token(ID);
    operadores();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      jj_consume_token(ID);
      break;
      }
    case CONSTANTE:{
      jj_consume_token(CONSTANTE);
      break;
      }
    default:
      jj_la1[33] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void para() throws ParseException {
    jj_consume_token(LOOPFOR);
    jj_consume_token(ABREPARENT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOINT:
    case TIPOFLOAT:
    case TIPOSTRING:{
      declaracao();
      break;
      }
    default:
      jj_la1[34] = jj_gen;
      ;
    }
    condicao();
    jj_consume_token(FIM);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FIM:
    case ATRIBUICAO:
    case SEPARADOR:
    case ABREVETOR:
    case ID:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        jj_consume_token(ID);
        incremento();
        break;
        }
      case FIM:
      case ATRIBUICAO:
      case SEPARADOR:
      case ABREVETOR:{
        declaraVariavel();
        break;
        }
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[36] = jj_gen;
      ;
    }
    jj_consume_token(FECHAPARENT);
    bloco();
}

  static final public void enquanto() throws ParseException {
    jj_consume_token(LOOPWHILE);
    jj_consume_token(ABREPARENT);
    condicao();
    jj_consume_token(FECHAPARENT);
    bloco();
}

  static final public void incremento() throws ParseException {
    jj_consume_token(INCREMENTO);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEPARADOR:{
        ;
        break;
        }
      default:
        jj_la1[37] = jj_gen;
        break label_12;
      }
      jj_consume_token(SEPARADOR);
      jj_consume_token(ID);
      jj_consume_token(INCREMENTO);
    }
    jj_consume_token(FIM);
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ExMachinaTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[38];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x38000,0x38000,0x38201,0x400c5000,0x80000,0x40000000,0x80000,0x40000,0x45000,0x80000,0x1040,0x40000,0x30138000,0x30138000,0x0,0x0,0x80000,0x0,0x40001000,0x80000,0x1000,0x0,0x38000,0x60,0x60,0x1e0,0x1e0,0x180,0x180,0x1040,0x1000,0xfc00000,0x200000,0x0,0x38000,0x400c4000,0x400c4000,0x80000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x8,0x0,0xd0,0x0,0x8f,0x8f,0x90,0x90,0x0,0x250,0x2d0,0x0,0x2d0,0x7,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0xd0,0xd0,0x0,0x0,0x90,0x0,0x80,0x80,0x0,};
	}

  /** Constructor with InputStream. */
  public ExMachina(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ExMachina(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ExMachinaTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 38; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 38; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ExMachina(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ExMachinaTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 38; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ExMachinaTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 38; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ExMachina(ExMachinaTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 38; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ExMachinaTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 38; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[43];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 38; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 43; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
